--- a/src/main/resources/templates/bookmarks.html
+++ b/src/main/resources/templates/bookmarks.html
@@ -24,7 +24,7 @@
     </div>
     <br/><br/>
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered table-dark">
             <thead>
             <tr>
                 <th scope="col">Repository name</th>
