--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 <br/><br/><br/>
 <div class="container" data-th-if="${repos != null}">
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered table-dark">
             <thead>
             <tr>
                 <th scope="col">Name</th>
@@ -50,38 +50,39 @@
             </tr>
             </tbody>
         </table>
-
-        <nav aria-label="Search pagination">
-            <ul class="pagination">
-                <li class="page-item" data-th-classappend="${repos.currentPage eq 1} ? 'disabled'">
-                    <a class="page-link"
-                       data-th-href="@{/search(query=${query},page=${repos.currentPage - 1})}">Previous</a>
-                </li>
-                <li class="page-item disabled"
-                    data-th-if="${repos.currentPage > 1}">
-                    <a class="page-link">
-                        <span>...</span>
-                    </a>
-                </li>
-                <li class="page-item" data-th-each="i : ${#numbers.sequence(repos.currentPage + 9 > repos.totalPagesCount ? repos.totalPagesCount - 9 : repos.currentPage,
+        <div class="container">
+            <nav  aria-label="Search pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" data-th-classappend="${repos.currentPage eq 1} ? 'disabled'">
+                        <a class="page-link"
+                           data-th-href="@{/search(query=${query},page=${repos.currentPage - 1})}">Previous</a>
+                    </li>
+                    <li class="page-item disabled"
+                        data-th-if="${repos.currentPage > 1}">
+                        <a class="page-link">
+                            <span>...</span>
+                        </a>
+                    </li>
+                    <li class="page-item" data-th-each="i : ${#numbers.sequence(repos.currentPage + 9 > repos.totalPagesCount ? repos.totalPagesCount - 9 : repos.currentPage,
                             repos.currentPage + 9 < repos.totalPagesCount ? repos.currentPage + 9 : repos.totalPagesCount, 1)}"
-                    data-th-classappend="${i eq repos.getCurrentPage()} ? 'active'">
-                    <a class="page-link" href="#" data-th-text="${i}"
-                       data-th-href="@{/search(query=${query},page=${i})}"></a>
-                </li>
-                <li class="page-item disabled"
-                    data-th-if="${repos.currentPage + 9 < repos.totalPagesCount}">
-                    <a class="page-link">
-                        <span>...</span>
-                    </a>
-                </li>
-                <li class="page-item"
-                    data-th-classappend="${repos.currentPage + 1 eq repos.totalPagesCount} ? 'disabled'">
-                    <a class="page-link"
-                       data-th-href="@{/search(query=${query},page=${repos.getCurrentPage() + 1})}">Next</a>
-                </li>
-            </ul>
-        </nav>
+                        data-th-classappend="${i eq repos.getCurrentPage()} ? 'active'">
+                        <a class="page-link" href="#" data-th-text="${i}"
+                           data-th-href="@{/search(query=${query},page=${i})}"></a>
+                    </li>
+                    <li class="page-item disabled"
+                        data-th-if="${repos.currentPage + 9 < repos.totalPagesCount}">
+                        <a class="page-link">
+                            <span>...</span>
+                        </a>
+                    </li>
+                    <li class="page-item"
+                        data-th-classappend="${repos.currentPage + 1 eq repos.totalPagesCount} ? 'disabled'">
+                        <a class="page-link"
+                           data-th-href="@{/search(query=${query},page=${repos.getCurrentPage() + 1})}">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
 <!--    <nav aria-label="Pagination" th:if="${repos.totalPagesCount gt 0}">
