--- a/src/main/resources/templates/repoDetails.html
+++ b/src/main/resources/templates/repoDetails.html
@@ -28,7 +28,7 @@
                         <div data-th-if="${repositoryDetails != null}" class="container p-4 my-4">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <table class="table table-striped">
+                                    <table class="table table-striped table-bordered table-dark">
                                         <thead>
                                         <tr>
                                             <th scope="col">UserId</th>
@@ -56,7 +56,7 @@
                     <div data-th-if="${repositoryDetails != null}" class="container p-3 my-3">
                         <div class="row">
                             <div class="col-md-12">
-                                <table class="table table-striped">
+                                <table class="table table-striped table-bordered table-dark">
                                     <thead>
                                     <tr>
                                         <th scope="col">User</th>
